Docker e Kubernetes/esempi/cap20/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: principale
  namespace: infra
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contatore
spec:
  parentRefs:
    - name: principale
      namespace: infra
  hostnames: [contatore.local]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /note
      backendRefs:
        - name: api-note
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: contatore
          port: 80
          weight: 90
        - name: contatore-canary
          port: 80
          weight: 10
