Docker e Kubernetes/esempi/cap20/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contatore-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: [contatore.example.com]
      secretName: contatore-tls
  rules:
    - host: contatore.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contatore
                port:
                  number: 80
