Docker e Kubernetes/esempi/cap20/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contatore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: contatore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contatore
                port:
                  number: 80
          - path: /note
            pathType: Prefix
            backend:
              service:
                name: api-note
                port:
                  number: 3000
